font spacing fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,7 +49,7 @@ div {
       
       .intro2 {
         font-size: 12px;
-        letter-spacing: 4px;
+        letter-spacing: 3px;
       }
 
       .intro3 .place{
